crates/fig-parser/tests/snapshots/integration_tests__edge_cases__chained_casts.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: casts
        generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: a
              ty: ~
              value:
                Cast:
                  expr:
                    Cast:
                      expr:
                        Cast:
                          expr:
                            Cast:
                              expr:
                                Path:
                                  segments:
                                    - x
                                  generic_args: []
                              target_type: U8
                          target_type: U16
                      target_type: U32
                  target_type: U64
          - Let:
              annotations: []
              name: b
              ty: ~
              value:
                Cast:
                  expr:
                    Cast:
                      expr:
                        Path:
                          segments:
                            - x
                          generic_args: []
                      target_type: F32
                  target_type: F64
          - Pass
