crates/fig-parser/tests/snapshots/integration_tests__edge_cases__empty_string.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: takes_string
        generic_params: []
        self_param: ~
        params:
          - name: s
            ty:
              Array:
                element_type: U8
                size: ~
        return_types:
          - Ok
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: use_empty
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: empty
              ty: ~
              value:
                StringLiteral: ""
          - Let:
              annotations: []
              name: also_empty
              ty: ~
              value:
                StringLiteral: ""
          - Expression:
              Call:
                callee:
                  Path:
                    segments:
                      - takes_string
                    generic_args: []
                args:
                  - StringLiteral: ""
                is_propagating: false
          - Pass
