crates/fig-parser/tests/snapshots/integration_tests__edge_cases__long_identifiers.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: setup_long
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: a_very_long_variable_name_that_goes_on_and_on_and_on
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "42"
                  suffix: ~
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: a_very_long_function_name_that_is_quite_descriptive
        generic_params: []
        self_param: ~
        params:
          - name: a_very_long_parameter_name
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Return:
              Path:
                segments:
                  - a_very_long_parameter_name
                generic_args: []
