crates/fig-parser/tests/snapshots/integration_tests__edge_cases__many_let_bindings.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: many_bindings
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: a
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "1"
                  suffix: ~
          - Let:
              annotations: []
              name: b
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "2"
                  suffix: ~
          - Let:
              annotations: []
              name: c
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "3"
                  suffix: ~
          - Let:
              annotations: []
              name: d
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "4"
                  suffix: ~
          - Let:
              annotations: []
              name: e
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "5"
                  suffix: ~
          - Let:
              annotations: []
              name: f
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "6"
                  suffix: ~
          - Let:
              annotations: []
              name: g
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "7"
                  suffix: ~
          - Let:
              annotations: []
              name: h
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "8"
                  suffix: ~
          - Let:
              annotations: []
              name: i
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "9"
                  suffix: ~
          - Let:
              annotations: []
              name: j
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "10"
                  suffix: ~
          - Let:
              annotations: []
              name: k
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: Add
                  rhs:
                    Path:
                      segments:
                        - b
                      generic_args: []
          - Let:
              annotations: []
              name: l
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - c
                      generic_args: []
                  op: Add
                  rhs:
                    Path:
                      segments:
                        - d
                      generic_args: []
          - Let:
              annotations: []
              name: m
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - e
                      generic_args: []
                  op: Add
                  rhs:
                    Path:
                      segments:
                        - f
                      generic_args: []
          - Let:
              annotations: []
              name: n
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - g
                      generic_args: []
                  op: Add
                  rhs:
                    Path:
                      segments:
                        - h
                      generic_args: []
          - Let:
              annotations: []
              name: o
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - i
                      generic_args: []
                  op: Add
                  rhs:
                    Path:
                      segments:
                        - j
                      generic_args: []
          - Let:
              annotations: []
              name: p
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    BinaryOp:
                      lhs:
                        BinaryOp:
                          lhs:
                            BinaryOp:
                              lhs:
                                Path:
                                  segments:
                                    - k
                                  generic_args: []
                              op: Add
                              rhs:
                                Path:
                                  segments:
                                    - l
                                  generic_args: []
                          op: Add
                          rhs:
                            Path:
                              segments:
                                - m
                              generic_args: []
                      op: Add
                      rhs:
                        Path:
                          segments:
                            - n
                          generic_args: []
                  op: Add
                  rhs:
                    Path:
                      segments:
                        - o
                      generic_args: []
          - Pass
