crates/fig-parser/tests/snapshots/integration_tests__edge_cases__nested_structs.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Inner
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: I32
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Outer
      generic_params: []
      requires: []
      fields:
        - name: inner
          ty:
            Path:
              segments:
                - Inner
              generic_args: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: DeepNest
      generic_params: []
      requires: []
      fields:
        - name: outer
          ty:
            Path:
              segments:
                - Outer
              generic_args: []
