crates/fig-parser/tests/snapshots/integration_tests__edge_cases__single_char_identifiers.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: setup
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: a
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "1"
                  suffix: ~
          - Let:
              annotations: []
              name: b
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "2"
                  suffix: ~
          - Let:
              annotations: []
              name: c
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: Add
                  rhs:
                    Path:
                      segments:
                        - b
                      generic_args: []
          - Mut:
              annotations: []
              name: x
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "0"
                  suffix: ~
          - Mut:
              annotations: []
              name: y
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "0"
                  suffix: ~
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: f
        generic_params: []
        self_param: ~
        params:
          - name: a
            ty: I32
          - name: b
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Return:
              BinaryOp:
                lhs:
                  Path:
                    segments:
                      - a
                    generic_args: []
                op: Add
                rhs:
                  Path:
                    segments:
                      - b
                    generic_args: []
