crates/fig-parser/tests/snapshots/integration_tests__edge_cases__underscore_identifiers.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: setup
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: _unused
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "42"
                  suffix: ~
          - Mut:
              annotations: []
              name: _counter
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "0"
                  suffix: ~
          - Let:
              annotations: []
              name: __low
              ty: ~
              value:
                BooleanLiteral: true
          - Let:
              annotations: []
              name: _x_
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "99"
                  suffix: ~
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: _helper
        generic_params: []
        self_param: ~
        params:
          - name: _arg
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Return:
              BinaryOp:
                lhs:
                  Path:
                    segments:
                      - _arg
                    generic_args: []
                op: Multiply
                rhs:
                  IntegerLiteral:
                    base: Decimal
                    digits: "2"
                    suffix: ~
