crates/fig-parser/tests/snapshots/integration_tests__edge_cases__zero_params.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: no_params
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Ok
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: no_params_no_return
        generic_params: []
        self_param: ~
        params: []
        return_types: []
      body:
        statements:
          - Pass
